2013-08-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/vga_init.c: Fix compilation on qemu-mips.
	* grub-core/kern/mips/qemu_mips/init.c: Likewise.

2013-08-13  Colin Watson  <cjwatson@ubuntu.com>

	* util/getroot.c (grub_util_biosdisk_get_grub_dev): Zero out
	grub_errno in the case where we handle GRUB_ERR_UNKNOWN_DEVICE by
	falling back to the partition device, otherwise a later call to this
	function may fail spuriously.
	Reported by Axel Beckert.  Fixes Debian bug #708614.

2013-08-12  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* autogen.sh: Replace find -not by the POSIX-compliant find !.

2013-08-12  Grégoire Sutre  <gregoire.sutre@gmail.com>

	Prevent shadowing of stdlib's devname(3) on BSD.

	* grub-core/disk/cryptodisk.c (grub_cmd_cryptomount): Rename devname
	and devlast to diskname and disklast, respectively.

2013-08-11  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig.in: Fix detection of Emacs autosave files.

2013-08-08  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* docs/grub.texi: Introduce terminal window position options:
	terminal-left: terminal window's left position
	terminal-top: terminal window's top position
	terminal-width: terminal window's width
	terminal-height: terminal window's height
	terminal-border: terminal window's border width
	* grub-core/gfxmenu/theme-loader.c: Likewise.
	* include/grub/gfxmenu_view.h: Likewise.
	* po/exlude.pot: Likewise.
	* grub-core/gfxmenu/view.c: Likewise.
	Also updated minimal window size.
	Also terminal_sanity_check function has been introduced.
	* grub-core/tests/checksums.h: Update (terminal window height
	is adjusted now for low resolution screen)

2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/checksums.h: Update (1-pixel difference in marker
	position).

2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/exclude.pot: Add few recent exceptions.

2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>
